--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Jiaxin Huang"
 title_separator          : "-"
 name                     : &name "Jiaxin Huang"
 description              : &description "3rd Year PhD Student, UIUC"
-url                      : https://teapot123.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jw64.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "teapot123/teapot123.github.io"
+repository               : "JingWangCEE/jw64.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
