--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "Publications"
-    url: /cv1/
+#   - title: "Publications"
+#     url: /cv1/
     
   # - title: "Guide"
   #   url: /markdown/
