--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jing Wang"
-  avatar           : "JWang.jpg"
+  avatar           : "JWang.png"
   bio              : "3rd Year PhD Student @ Princeton University"
   location         : #"Location"
   employer         :
